myapp.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
  labels:
    app: myapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      annotations:
        ready: "true"
        url: "https://github.com/tektoncd/pipeline/tree/master/cmd/entrypoint"
      labels:
        app: myapp
    spec:
      volumes:
      - name: podinfo
        downwardAPI:
          defaultMode: 420
          items:
          - fieldRef:
              apiVersion: v1
              fieldPath: metadata.annotations['ready']
            path: ready
      containers:
      - name: myapp
        image: lalyos/lunch-wto
        readinessProbe:
            initialDelaySeconds: 2
            periodSeconds: 3
            failureThreshold: 1
            exec:
              command: ["grep", "true", "/etc/podinfo/ready"]
        volumeMounts:
          - name: podinfo
            mountPath: /etc/podinfo
        ports:
        - containerPort: 8080
        resources: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: myapp
  name: myapp
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: myapp
